# sel

./: .gitignore  Body.cpp  Cargo.toml  Common.cpp  Head.cpp  LICENSE  NOTE.md  README.md  Session.vim  Sole.cpp  TODO.txt  Tail.cpp  WRITEME.md  compile_flags.txt  grammar.js  meson.build  meson_options.txt  notes.txt  package.json  plygr.cpp  poc.cpp  wip  wip-1  wip-2  wip-3
bench/generator/: main.c
bench/solutions/: awk  lua  main.c  python-lut  python-match  sel-first
doc/: README.md
doc/Development/: Extending.md  Tests.md
doc/Scripting/: Builtins.md  Literals.md  Operators.md  Syntax.md  Type-System.md
dsl_macro_lib/: Cargo.toml
dsl_macro_lib/src/: lib.rs
etc/: cov.sh  sel.vim
examples/: phi.sel
fart/: Session.vim  TODO  idk.py  iterate.sel
lib/: meson.build  prelude.cpp  prelude.hpp  prelude_visit_each
lib/include/: coerse.hpp  error.hpp  errors.hpp  function.hpp  list.hpp  number.hpp  string.hpp  types.hpp  utils.hpp  value.hpp
lib/include/sel/: _bin_helpers.tmp.hpp  application.hpp  bidoof.hpp  builtins.hpp  builtins_visit_each  crap.hpp  engine.hpp  errors.hpp  forward.hpp  ll.hpp  parser.hpp  types.hpp  unicode.hpp  utils.hpp  visitors.hpp
lib/src/: _unicode_grapheme_break  application.cpp  builtins.cpp  coerse.cpp  engine.cpp  errors.cpp  function.cpp  list.cpp  number.cpp  parser.cpp  prelude.txt  primer.cpp  string.cpp  types.cpp  unicode.cpp  utils.cpp  value.cpp  visitors.cpp
lib/src/visitors/: _templlate.hpp  codegen.cpp  help.cpp  name.cpp  repr.cpp  show.cpp
lib/tests/: common.hpp  meson.build  test_TypeMapplied.cpp  test_Type_applied.cpp  test_Type_compare.cpp  test_VisRepr.cpp  test_bins_applied.cpp  test_def_kw.cpp  test_each.cpp  test_end.cpp  test_parseApp.cpp  test_parseType.cpp  test_runApp.cpp
ll-playground/: cat.ll  llvm-hello-world.ll  some.ll  tonum.ll  tostr.ll  wip-tonum-add1-tostr.ll
queries/: highlights.scm
s/: cover  el  el-db  el-min  how-codegen  peed  tep-codegen  test
src/: actions.hpp  bidoof.rs  buildapp.hpp  builtin.rs  check.rs  coerse.cpp  coerse.hpp  dsl_playground.rs  engine.rs  error.cpp  error.hpp  error.rs  errors.rs  format.rs  fund.rs  interp.rs  lex.rs  lower.rs  main.cpp  main.rs  meson.build  module.rs  number.cpp  number.hpp  options.hpp  parse.rs  parser.rs  prelude.rs  prelude.sel  reform.rs  scope.rs  string.cpp  string.hpp  termutils.hpp  tests.rs  types.rs  typing.rs  utils.hpp  value.cpp  value.hpp  (+2 more)
src/etc/: sel-completion.bash  sel.1  sel.bash
src/snapshots/: sel__check__test-10.snap  sel__check__test-11.snap  sel__check__test-12.snap  sel__check__test-13.snap  sel__check__test-2.snap  sel__check__test-3.snap  sel__check__test-4.snap  sel__check__test-5.snap  sel__check__test-6.snap  sel__check__test-7.snap  sel__check__test-8.snap  sel__check__test-9.snap  sel__check__test.snap  sel__lex__test-2.snap  sel__lex__test-3.snap  sel__lex__test-4.snap  sel__lex__test-5.snap  sel__lex__test-6.snap  sel__lex__test-7.snap  sel__lex__test.snap  sel__parse__test-10.snap  sel__parse__test-11.snap  sel__parse__test-12.snap  sel__parse__test-13.snap  sel__parse__test-14.snap  sel__parse__test-15.snap  sel__parse__test-16.snap  sel__parse__test-17.snap  sel__parse__test-18.snap  sel__parse__test-19.snap  sel__parse__test-2.snap  sel__parse__test-20.snap  sel__parse__test-21.snap  sel__parse__test-22.snap  sel__parse__test-23.snap  sel__parse__test-24.snap  sel__parse__test-25.snap  sel__parse__test-26.snap  sel__parse__test-27.snap  sel__parse__test-28.snap  (+67 more)
stub/: prelude.cpp  prelude.hpp  prelude_visit_each
test/corpus/: test.txt
